Adding formations is now smooooth